syntax = "proto3";

package cr8r.services;

import "services/events/add.proto";

service Events {
    rpc AddEvent (PAddEventRequest) returns (PAddEventReply);
}
